# cwatch

./: .gitignore  .project  .travis.yml  AUTHORS  BUGS  README  README.md  TODO.md  configure.ac  list.c  valgrind_cmd
script/: build.sh
src/: Makefile.am  Makefile.am~  commandline.c  commandline.h  cwatch  cwatch.c  cwatch.h  list.c  list.h  main.c  queue.c  queue.h
tests/: Makefile.am  check_commandline  check_commandline.c  check_cwatch.c  check_list.c  check_queue.c
tests/uat/: HOWTO.md  Makefile.am  cwatch  execute_a_command_on_access_event.t  execute_a_command_on_attrib_event.t  execute_a_command_on_close_nowrite_event.t  execute_a_command_on_close_write_event.t  execute_a_command_on_create_event.t  execute_a_command_on_delete_event.t  execute_a_command_on_modify_event.t  execute_a_command_on_moved_from_event.t  execute_a_command_on_moved_to_event.t  execute_a_command_on_open_event.t
tests/uat/libtest/: util.sh
