# fill with the filenames of testsuites
TESTS = execute_a_command_on_create_event.t\
		execute_a_command_on_modify_event.t\
		execute_a_command_on_delete_event.t\
		execute_a_command_on_open_event.t  \
		execute_a_command_on_close_nowrite_event.t\
		execute_a_command_on_close_write_event.t\
		execute_a_command_on_access_event.t\
		execute_a_command_on_attrib_event.t\
		execute_a_command_on_moved_from_event.t\
		execute_a_command_on_moved_to_event.t
